mstest_output_2025-02-26_11.23.02/mand/2_correction/103_stderr_minishell
tmp_path_test1/test1.c:1:1: warning: missing terminating ' character
    1 | '#include <unistd.h>
      | ^
tmp_path_test1/test1.c:1:1: error: missing terminating ' character
    1 | '#include <unistd.h>
      | ^~~~~~~~~~~~~~~~~~~~
tmp_path_test1/test1.c: In function ‘main’:
tmp_path_test1/test1.c:2:12: warning: implicit declaration of function ‘write’ [-Wimplicit-function-declaration]
    2 | int main(){write(1, "1\n", 2);}'
      |            ^~~~~
tmp_path_test1/test1.c: At top level:
tmp_path_test1/test1.c:2:32: warning: missing terminating ' character
    2 | int main(){write(1, "1\n", 2);}'
      |                                ^
tmp_path_test1/test1.c:2:32: error: missing terminating ' character
tmp_path_test2/test2.c:1:1: warning: missing terminating ' character
    1 | '#include <unistd.h>
      | ^
tmp_path_test2/test2.c:1:1: error: missing terminating ' character
    1 | '#include <unistd.h>
      | ^~~~~~~~~~~~~~~~~~~~
tmp_path_test2/test2.c: In function ‘main’:
tmp_path_test2/test2.c:2:12: warning: implicit declaration of function ‘write’ [-Wimplicit-function-declaration]
    2 | int main(){write(1, "2\n", 2);}'
      |            ^~~~~
tmp_path_test2/test2.c: At top level:
tmp_path_test2/test2.c:2:32: warning: missing terminating ' character
    2 | int main(){write(1, "2\n", 2);}'
      |                                ^
tmp_path_test2/test2.c:2:32: error: missing terminating ' character
a.out: command not found
a.out: command not found
